Correction of the changes after review